# AMELI

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
ameli/: __init__.py  casimir.py  config.py  datatype.py  matrix.py  product.py  sparse.py  states.py  symroots.py  transform.py  uintarray.py  unit.py  vault  vault.py
ameli/lanthanide/: __init__.py  build.py  content.py  dataset.py  graph.py  operators.py  zenodo.py
generate/: build.py  generate.py  graph.py  operators.py
results/: ameli_test.html
run/: ameli_test.html  check_matrix.py  check_orthonormal.py  check_transform.py  closed.py  generate.py  logger.py  rename.py  run.py  test.py  update.py  update_matrix.py  upload.py
src/ameli/: config.py  matrix.py  product.py  sparse.py  transform.py  uintarray.py  unit.py  vault.py
test/: conftest.py  data_energy.py  data_magnetic.py  data_states.py  data_triple.py  pytest.ini  run_energy.py  test.py  test_01_orthonormal.py  test_02_transform.py  test_03_states.py  test_04_screen.py  test_04_triple.py  test_05_magnetic.py  test_05_triple.py  test_06_energy.py  test_06_magnetic.py  test_07_energy.py  test_configuration.py  test_magnetic.py  test_orthonormal.py  test_product.py  test_states.py  test_transform.py  test_triple.py
test/results/: ameli_test.html  energy.db
test/tables/: energy.tex  reduced.tex  tables.py
upload/: content.py  dataset.py  upload.py  zenodo.py
