# pyproject.toml
[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ameli", "ameli.lanthanide"]

[project]
name = "AMELI"
version = "1.1.0"
authors = [
    { name = "Reinhard Caspary", email = "reinhard.caspary@phoenixd.uni-hannover.de"},
]
description = "Python 3 package to calculate angular matrix elements of lanthanide ions."
license = "MIT"
readme = "README.md"
dependencies = [
    "psutil",
    "numpy",
    "sympy",
	"h5py",
    "scidatacontainer",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
