# pyproject.toml
[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ameli", "ameli.lanthanide"]

[project]
name = "AMELI"
version = "1.2.0"
authors = [
    { name = "Reinhard Caspary", email = "reinhard.caspary@phoenixd.uni-hannover.de"},
]
description = "Python 3 package to calculate angular matrix elements of lanthanide ions."
license = "MIT"
readme = "README.md"
dependencies = [
	"h5py == 3.15.1",
    "numpy == 2.4.2",
    "psutil == 7.2.2",
    "requests == 2.32.5",
    "scidatacontainer == 1.1.10",
    "sympy == 1.14.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
