# pyproject.toml
[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "AMELI"
version = "1.3.1"
authors = [
    { name = "Reinhard Caspary", email = "reinhard.caspary@phoenixd.uni-hannover.de"},
]
description = "Python 3 package to calculate angular matrix elements of lanthanide ions."
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"h5py == 3.15.1",
    "numpy == 2.4.2",
    "scidatacontainer == 1.2.0",
    "sympy == 1.14.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/reincas/AMELI"
Issues = "https://github.com/reincas/AMELI/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]